test/errors/template.002.tmpl
<TMPL_IF b_condition>
    <TMPL_VAR b_text>
</TMPL_UNLESS>
